@@ -44,6 +44,7 @@
             Fix issue using String.replace on flash-based (read only) strings
             Bangle.js2: Stop Bangle.setLCDBrightness turning the LCD backlight on 
             Graphics.drawImages: add 'compose' and 'palette' operators to allow one image to be composed on another (for instance XOR on background)
+            Bangle.js2: Bangle.setOptions({lowResistanceFix:1}) now provides a workaround for Bangle.js owners that have a Bangle with a button that appears stuck on
 
      2v21 : nRF52: free up 800b more flash by removing vector table padding
             Throw Exception when a Promise tries to resolve with another Promise (#2450)
